...

    <string name="no_data_attached_to_account">No data attached to your account was detected</string>
    <string name="current_balance">Current balance</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="category">Category</string>
    <string name="add">Add</string>
    <string name="add_income_category">Add Income Category</string>
    <string name="add_expense_category">Add Expense Category</string>
    <string name="add_expense_record">Add Expense Record</string>
    <string name="add_income_record">Add Income Record</string>
    
    <string name="wage">Wage</string>
...
    <string name="education">Education</string>
    <string name="other">Other</string>

    <string name="employment">Employment</string>

    <string name="pick_a_date">Pick a date</string>
    <string name="ok">OK</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="progress">In progress</string>
    <string name="invalid_format">Invalid format</string>
    <string name="category_doesnt_exist">Category does not exist</string>

...
    <string name="categories">Categories</string>
    <string name="financial_accounts">Financial Accounts</string>
    <string name="switch_to_this_account">Switch to this account</string>
    <string name="delete_account">Delete account</string>

    <string name="bottom_sheet">Bottom sheet</string>
    <string name="text_field">Text field</string>

    <string name="change_currency">Change currency</string>
    <string name="change_currency_from">Change currency from</string>
    <string name="change_currency_to">to</string>
    <string name="be_advised">Be advised</string>
    <string name="currency_conversion_warning">You can change currency format only once a day. Also, transactions will not be converted to
    target currency</string>
    <string name="already_changed_currency">Already changed currency today</string>
    <string name="confirm">Confirm</string>
    <string name="icons_by">Icons by\u00A0</string>
    <string name="sign_out">Sign out</string>
</resources>
